z-index and footer line fix

--- a/css/modal.css
+++ b/css/modal.css
@@ -10,7 +10,7 @@
     font-weight: 600;
 }
 
-.line {
+.header-line {
     width: 100%;
     height: 1px;
     background-color: #273D4A;
@@ -73,6 +73,7 @@ body.modal-container {
     visibility: hidden;
     opacity: 0;
     transition: all 0.5s ease;
+    z-index: 999;
 }
 
 .modal-show {
